tests/data/gatherer_namespace_performance_test_config.yaml
namespaces:
  # sets up 500 namespaces with 1500 pods each, in the perf-node-<number> node, where istio injection is defined on the namespace
  - namePrefix: perf-test-ns-
    count: 500
    labels:
      env: performance
    isIstioInjected: true
    hasMetrics: true
    podConfig:
      namePrefix: app-pod-
      count: 1500
      nodeNamePrefix: perf-node-
      labels:
        app: myapp
      appContainer:
        cpuRequest: "150m"
        memRequest: "200Mi"
        cpuActual: "100m"
        memActual: "150Mi"
      istioProxy:
        cpuRequest: "50m"
        memRequest: "100Mi"
        cpuActual: "25m"
        memActual: "75Mi"
  
  # sets up 500 namespaces with 1000 pods each, in the perf-node-2-<number> node, where istio injection is defined on the namespace
  - namePrefix: perf-test-ns-2-
    count: 500
    labels:
      env: performance
    isIstioInjected: true
    hasMetrics: true
    podConfig:
      namePrefix: app-pod-2-
      count: 1000
      nodeNamePrefix: perf-node-2-
      labels:
        app: myapp
      appContainer:
        cpuRequest: "150m"
        memRequest: "200Mi"
        cpuActual: "100m"
        memActual: "150Mi"
      istioProxy:
        cpuRequest: "50m"
        memRequest: "100Mi"
        cpuActual: "25m"
        memActual: "75Mi"

  # sets up 500 namespaces with 1500 pods each, in the perf-node-<number> node, where istio injection is defined on the pod
  - namePrefix: perf-test-ns-3-
    count: 500
    labels:
      env: performance
    isIstioInjected: false
    hasMetrics: true
    podConfig:
      namePrefix: app-pod-injected-
      count: 1500
      nodeNamePrefix: perf-node-
      labels:
        app: myapp
        sidecar.istio.io/inject: "true"
      appContainer:
        cpuRequest: "150m"
        memRequest: "200Mi"
        cpuActual: "100m"
        memActual: "150Mi"
      istioProxy:
        cpuRequest: "50m"
        memRequest: "100Mi"
        cpuActual: "25m"
        memActual: "75Mi"
  
  # sets up 250 namespaces with 1500 pods each, in the perf-node-<number> node, where istio injection is not defined
  - namePrefix: no-istio-ns-
    count: 250
    labels:
      env: no-istio
    isIstioInjected: false
    hasMetrics: false
    podConfig:
      namePrefix: simple-pod-
      count: 1500
      nodeNamePrefix: perf-node-
      labels:
        app: simpleapp
      appContainer:
        cpuRequest: "50m"
        memRequest: "64Mi"

  # sets up 250 namespaces with 1500 pods each, in the perf-node-2-<number> node, where istio injection is not defined
  - namePrefix: no-istio-ns-2-
    count: 250
    labels:
      env: no-istio
    isIstioInjected: false
    hasMetrics: false
    podConfig:
      namePrefix: simple-pod-2-
      count: 1500
      nodeNamePrefix: perf-node-2-
      labels:
        app: simpleapp
      appContainer:
        cpuRequest: "50m"
        memRequest: "64Mi"

  # sets up 500 namespaces with 1500 pods each, in the perf-node-3-<number> node, where istio injection is defined on the pod, but is explicitly disabled in the namespace
  - namePrefix: perf-test-ns-disabled-
    count: 500
    labels:
      env: performance
      istio-injection: disabled
    isIstioInjected: false
    hasMetrics: true
    podConfig:
      namePrefix: app-pod-disabled-
      count: 500
      nodeNamePrefix: perf-node-3-
      labels:
        app: myapp
        sidecar.istio.io/inject: "true"
      appContainer:
        cpuRequest: "150m"
        memRequest: "200Mi"
        cpuActual: "100m"
        memActual: "150Mi"
